--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
     <div id="debug-info" style="position: fixed; top: 10px; left: 10px; color: white; background: rgba(0, 0, 0, 0.5); padding: 10px; z-index: 1000;"></div>
 
     <script type="module">
-        import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.module.js';
-        import { VRButton } from 'https://cdn.jsdelivr.net/npm/three@0.150.1/examples/jsm/webxr/VRButton.js';
+        //import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.150.1/build/three.module.js';
+        //import { VRButton } from 'https://cdn.jsdelivr.net/npm/three@0.150.1/examples/jsm/webxr/VRButton.js';
+        import * as THREE from './three.module.js';
+        import { VRButton } from './VRButton.js';
 
         let xrRefSpace_local = null;
         let xrRefSpace_viewer = null;
@@ -36,7 +38,7 @@
         // 加载纹理
         // WebSocket 连接部分
         const serverAddress = window.location.hostname;
-        const socket = new WebSocket(`wss://${serverAddress}:8765`); // 使用动态获取的主机名作为 WebSocket 地址
+        const socket = new WebSocket(`wss://${serverAddress}:8012/ws/video`); // 使用动态获取的主机名作为 WebSocket 地址
         const socketPoseServer = new WebSocket(`wss://${serverAddress}:8764`); 
 
         // 创建一个空的纹理，这里会动态更新
